--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-requests~=2.28.2
+requests~=2.31.0
 validators~=0.22.0
 pytest~=7.4.2
-setuptools~=58.0.4
 urllib3~=1.26.15
+tabulate~=0.9.0
+pandas~=2.2.0
