--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "pyegeria"
-version = "0.1.2.0"
+version = "0.2.4"
 authors = [
     {name ="Dan Wolfson", email= "dan.wolfson@pdr-associates.com"},
 ]
@@ -20,7 +20,10 @@ dependencies = [
     "pytest~=7.4.2",
     "urllib3~=1.26.15",
     "tabulate~=0.9.0",
-    "pandas~=2.2.0"
+    "pandas~=2.2.0",
+    "rich~=13.7.1",
+    "httpx~=0.26.0"
+
 ]
 keywords = ["egeria", "metadata", "governance"]
 classifiers = [
