--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,55 +1,42 @@
 
 # SPDX-License-Identifier: Apache-2.0
 # Copyright Contributors to the ODPi Egeria project.
-
-
-[tool.poetry]
-name = "pyegeria"
-version = "0.0.10"
-authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
-
-description = "A prototype python client for Egeria"
-readme= "README.md"
-#packages = [{include = "pyegeria"}]
-
-license =  "LICENSE"
-
-[tool.poetry.dependencies]
-python = ">=3.9"
-requests = ">=2.28.*"
-validators =">=0.22"
-
-setuptools = ">=58.0"
-urllib3 = ">=1.26"
-
-[tool.poetry.group.test.dependencies]
-pytest ="7.4.*"
-requests-mock = "1.10.0"
-
-
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+#requires = ["hatchling"]
+requires = ["setuptools", "wheel"]
+#build-backend = "hatchling.build"
+build-backend = "setuptools.build_meta"
 
 [project]
-
-
+name = "pyegeria"
+version = "0.3.2"
+#license = 'Apache 2.0'
+authors = [
+    {name ="Dan Wolfson", email= "dan.wolfson@pdr-associates.com"},
+]
+description = "A python client for Egeria"
+readme= "README.md"
+requires-python = ">=3.10"
+dependencies = [
+    "requests~=2.31.0",
+    "validators~=0.22.0",
+    "pytest~=7.4.2",
+    "urllib3~=1.26.15",
+    "tabulate~=0.9.0",
+    "pandas~=2.2.0",
+    "rich~=13.7.1",
+    "httpx~=0.26.0"
+]
+keywords = ["egeria", "metadata", "governance"]
 classifiers = [
     "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python",
-    "Programming Language :: Python :: 3"
-]
-keywords = ["metadata management", "egeria", "catalog"]
-dependencies = [
+    "Programming Language :: Python :: 3",
+ ]
 
-    'tomli; python_version <= "3.11"',
-]
-requires-python = ">=3.11"
-
-[project.optional-dependencies]
-dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]
 
 [project.urls]
-Homepage = "https://egeria-project.org"
+Homepage = "https://github.com/odpi/egeria-python"
+Issues = "https://github.com/odpi/egeria-python/issues"
 
-[project.scripts]
+
