--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-requests~=2.28.2
+requests~=2.31.0
 validators~=0.22.0
 pytest~=7.4.2
-setuptools~=58.0.4
+setuptools~=69.0.3
 urllib3~=1.26.15
+pandas~=2.2.0
+tabulate~=0.9.0
+httpx~=0.26.0
+#pyegeria~=0.2.1
+rich~=13.7.0
