--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,10 +34,10 @@ classifiers = [
     "Programming Language :: Python :: 3",
  ]
 
-#[project.scripts]
-#    view_server_status = "examples.widgets.operational.view_server_status:main"
-#    view_my_todos = "examples.widgets.personal_organizer.view_my_todos:main"
-#    list_asset_types = "examples.widgets.developer.list_asset_types:main"
+[project.scripts]
+    view_server_status = "widgets.operational.view_server_status:main"
+    view_my_todos = "examples.widgets.personal_organizer.view_my_todos:main"
+    list_asset_types = "examples.widgets.developer.list_asset_types:main"
 
 
 
