--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "0.5.1"
+version = "0.5.5"
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
 readme = "README.md"
@@ -24,13 +24,15 @@ packages = [
     ]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
 httpx = "^0.27.0"
 rich = "^13.7.1"
 validators = "^0.32.0"
 urllib3 = "^2.2.2"
 requests = "^2.32.3"
 confluent-kafka = "^2.5.0"
+pytest = "^8.2.2"
+jupyter = "^1.0.0"
 
 
 [build-system]
