--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "0.5.6.1"
+version = "0.5.6.4"
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
 readme = "README.md"
@@ -48,27 +48,30 @@ pytest = "^8.2.2"
 
 [tool.poetry.scripts]
     list_assets = "examples.widgets.catalog_user.list_assets:main"
-    view_asset_graph = "examples.widgets.catalog_user.view_asset_graph:main"
-    view_collection = "examples.widgets.catalog_user.view_collection:main"
-    view_glossary = "examples.widgets.catalog_user.view_glossary:main"
+    get_asset_graph = "examples.widgets.catalog_user.get_asset_graph:main"
+    get_collection = "examples.widgets.catalog_user.get_collection:main"
+    list_glossary = "examples.widgets.catalog_user.list_glossary:main"
 
     get_tech_type_elements = "examples.widgets.operational.get_tech_type_elements:main"
     get_tech_type_template = "examples.widgets.operational.get_tech_type_template:main"
-    view_asset_events = "examples.widgets.operational.view_asset_events:main"
-    view_coco_status = "examples.widgets.operational.view_coco_status:main"
-    view_eng_action_status = "examples.widgets.operational.view_eng_action_status:main"
-    view_gov_eng_status = "examples.widgets.operational.view_gov_eng_status:main"
-    view_integ_daemon_status = "examples.widgets.operational.view_integ_daemon_status:main"
-    view_platform_status = "examples.widgets.operational.view_platform_status:main"
-    view_server_list = "examples.widgets.operational.view_server_list:main"
-    view_server_status = "examples.widgets.operational.view_server_status:main"
+    monitor_asset_events = "examples.widgets.operational.monitor_asset_events:main"
+    monitor_coco_status = "examples.widgets.operational.monitor_coco_status:main"
+    monitor_eng_action_status = "examples.widgets.operational.monitor_eng_action_status:main_live"
+    list_eng_action_status = "examples.widgets.operational.monitor_eng_action_status:main_paging "
+    monitor_gov_eng_status = "examples.widgets.operational.monitor_gov_eng_status:main_live"
+    list_gov_eng_status = "examples.widgets.operational.monitor_gov_eng_status:main_paging"
+    monitor_integ_daemon_status = "examples.widgets.operational.monitor_integ_daemon_status:main_live"
+    list_integ_daemon_status = "examples.widgets.operational.monitor_integ_daemon_status:main_paging"
+    monitor_platform_status = "examples.widgets.operational.monitor_platform_status:main"
+    monitor_server_list = "examples.widgets.operational.monitor_server_list:main"
+    monitor_server_status = "examples.widgets.operational.monitor_server_status:main"
     refresh_integration_daemon = "examples.widgets.operational.refresh_integration_daemon:main"
 
-    get_my_profile = "examples.widgets.personal_organizer.get_my_profile:main"
+    list_my_profile = "examples.widgets.personal_organizer.list_my_profile:main"
     list_projects = "examples.widgets.personal_organizer.list_projects:main"
     list_todos = "examples.widgets.personal_organizer.list_todos:main"
-    view_open_todos = "examples.widgets.personal_organizer.view_open_todos:main"
-    view_my_todos = "examples.widgets.personal_organizer.view_my_todos:main"
+    monitor_open_todos = "examples.widgets.personal_organizer.monitor_open_todos:main"
+    monitor_my_todos = "examples.widgets.personal_organizer.monitor_my_todos:main"
 
     get_guid_info = "examples.widgets.developer.get_guid_info:main"
     get_tech_details = "examples.widgets.developer.get_tech_details:main"
