--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "0.5.6.4"
+version = "0.5.6.5"
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
 readme = "README.md"
@@ -33,6 +33,8 @@ requests = "^2.32.3"
 confluent-kafka = "^2.5.0"
 pytest = "^8.2.2"
 jupyter = "^1.0.0"
+click = "^8.1.7"
+trogon = "^0.5.0"
 
 
 [build-system]
@@ -66,7 +68,8 @@ pytest = "^8.2.2"
     monitor_server_list = "examples.widgets.operational.monitor_server_list:main"
     monitor_server_status = "examples.widgets.operational.monitor_server_status:main"
     refresh_integration_daemon = "examples.widgets.operational.refresh_integration_daemon:main"
-
+    load_archive = "examples.widgets.operational.load_archive.py:load_archive"
+    load_archive_tui = "examples.widgets.operational.load_archive.py:tui"
     list_my_profile = "examples.widgets.personal_organizer.list_my_profile:main"
     list_projects = "examples.widgets.personal_organizer.list_projects:main"
     list_todos = "examples.widgets.personal_organizer.list_todos:main"
