--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "0.6.1"
+version = "0.6.2"
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
 readme = "README.md"
@@ -88,7 +88,7 @@ pytest = "^8.2.2"
     egeria_tech = "examples.widgets.cli.egeria_cat:cli"
 #    egeria_tech_menu = "examples.widgets.cli.egeria_cat:menu"
     egeria_per = "examples.widgets.cli.egeria_per:cli"
-    egeria = "examples.widgets.cli.egeria:cli"
+    hey_egeria = "examples.widgets.cli.egeria:cli"
 
     get_guid_info = "examples.widgets.tech.get_guid_info:main"
     get_tech_details = "examples.widgets.tech.get_tech_details:main"
