--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ fastjsonschema==2.19.1
 fqdn==1.5.1
 h11==0.14.0
 httpcore==1.0.5
-httpx==0.26.0
+httpx~=0.27.0
 idna==3.7
 importlib_metadata==7.1.0
 iniconfig==2.0.0
@@ -83,7 +83,7 @@ pure-eval==0.2.2
 pycparser==2.22
 Pygments==2.18.0
 pyproject_hooks==1.0.0
-pytest==8.0.2
+pytest~=8.3.2
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytz==2024.1
@@ -93,7 +93,7 @@ qtconsole==5.5.1
 QtPy==2.4.1
 readme_renderer==43.0
 referencing==0.35.0
-requests==2.31.0
+requests~=2.32.3
 requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
 rfc3986==2.0.0
@@ -114,11 +114,16 @@ twine==5.0.0
 types-python-dateutil==2.9.0.20240316
 tzdata==2024.1
 uri-template==1.3.0
-urllib3==1.26.18
-validators==0.22.0
+urllib3~=2.2.2
+validators~=0.32.0
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.8.0
 widgetsnbextension==4.0.10
 zipp==3.18.1
+
+pyegeria~=0.5.6.4
+click~=8.1.7
+trogon~=0.5.0
+textual~=0.75.1
