More fixes to widgets to accomodate changes in JSON. Finished Classification Manager module methods - not all tests complete yet. Minor changes to the CLI.
Signed-off-by: Dan Wolfson <dwolfson@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "0.7.0git s"
+version = "0.7.4"
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
 readme = "README.md"
