--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "0.7.4"
+version = "0.7.18"
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
 readme = "README.md"
@@ -63,7 +63,7 @@ pytest = "^8.2.2"
     list_todos = "examples.widgets.cat.list_todos:main"
     list_cert_types = "examples.widgets.cat.list_cert_types:main"
     get_project_structure = "examples.widgets.cat.get_project_structure:main"
-
+    list_relationships = "examples.widgets.cat.list_relationships:main"
 
     monitor_asset_events = "examples.widgets.ops.monitor_asset_events:main"
     monitor_coco_status = "examples.widgets.ops.monitor_coco_status:main"
@@ -86,13 +86,10 @@ pytest = "^8.2.2"
     monitor_open_todos = "examples.widgets.my.monitor_open_todos:main"
     monitor_my_todos = "examples.widgets.my.monitor_my_todos:main"
 
-    egeria_ops = "examples.widgets.cli.egeria_ops:cli"
-#    egeria_ops_menu = "examples.widgets.cli.egeria_ops:menu"
-    egeria_cat = "examples.widgets.cli.egeria_cat:cli"
-#    egeria_cat_menu = "examples.widgets.cli.egeria_cat:menu"
-    egeria_tech = "examples.widgets.cli.egeria_cat:cli"
-#    egeria_tech_menu = "examples.widgets.cli.egeria_cat:menu"
-    egeria_per = "examples.widgets.cli.egeria_per:cli"
+    hey_egeria_ops = "examples.widgets.cli.egeria_ops:cli"
+    hey_egeria_cat = "examples.widgets.cli.egeria_cat:cli"
+    hey_egeria_tech = "examples.widgets.cli.egeria_cat:cli"
+    hey_egeria_per = "examples.widgets.cli.egeria_per:cli"
     hey_egeria = "examples.widgets.cli.egeria:cli"
 
     get_guid_info = "examples.widgets.tech.get_guid_info:main"
@@ -101,5 +98,8 @@ pytest = "^8.2.2"
     list_registered_services = "examples.widgets.tech.list_registered_services:main"
     list_relationship_types = "examples.widgets.tech.list_relationship_types:main"
     list_tech_templates = "examples.widgets.tech.list_tech_templates:main"
+    get_element_info = "examples.widgets.tech.get_element_info:main"
+    list_elements = "examples.widgets.tech.list_elements:main"
+    list_related_specification = "examples.widgets.tech.list_related_specification:main"
 
     list_valid_metadata_values = "examples.widgets.tech.list_valid_metadata_values:main"
