ADid some more edits to widgets and some other updates.
Signed-off-by: Dan Wolfson <dwolfson@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "0.7.19"
+version = "0.7.25"
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
 readme = "README.md"
@@ -65,6 +65,7 @@ pytest = "^8.2.2"
     get_project_structure = "examples.widgets.cat.get_project_structure:main"
     get_project_dependencies = "examples.widgets.cat.get_project_dependencies:main"
     list_relationships = "examples.widgets.cat.list_relationships:main"
+    list_user_ids = "examples.widgets.cat.list_user_ids:main"
 
     monitor_asset_events = "examples.widgets.ops.monitor_asset_events:main"
     monitor_coco_status = "examples.widgets.ops.monitor_coco_status:main"
@@ -82,6 +83,8 @@ pytest = "^8.2.2"
     load_archive = "examples.widgets.ops.load_archive:load_archive"
     load_archive_tui = "examples.widgets.ops.load_archive:tui"
     list_catalog_targets = "examples.widgets.ops.list_catalog_targets:main"
+    start_daemon = "examples.widgets.ops.engine_actions:start_daemon"
+    stop_daemon = "examples.widgets.ops.engine_actions:stop_daemon"
 
     list_my_profile = "examples.widgets.my.list_my_profile:main"
     monitor_open_todos = "examples.widgets.my.monitor_open_todos:main"
@@ -92,10 +95,11 @@ pytest = "^8.2.2"
     mark_todo_complete = "examples.widgets.my.todo_actions:mark_todo_complete"
     reassign_todo = "examples.widgets.my.todo_actions:reassign_todo"
 
+
     hey_egeria_ops = "examples.widgets.cli.egeria_ops:cli"
     hey_egeria_cat = "examples.widgets.cli.egeria_cat:cli"
     hey_egeria_tech = "examples.widgets.cli.egeria_cat:cli"
-    hey_egeria_per = "examples.widgets.cli.egeria_per:cli"
+    hey_egeria_my = "examples.widgets.cli.egeria_my:cli"
     hey_egeria = "examples.widgets.cli.egeria:cli"
 
     get_guid_info = "examples.widgets.tech.get_guid_info:main"
