--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ venv
 *#
 *~
 
+# Poetry artifacts
+poetry.lock
+
 # Mac OS
 __MACOSX
 *.dylib
@@ -156,5 +159,3 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-
-poetry.lock
