--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "1.5.1"
+version = "1.5.1.0.4"
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
 readme = "README.md"
@@ -67,6 +67,8 @@ pytest = "^8.2.2"
     list_relationships = "commands.cat.list_relationships:main"
     list_user_ids = "commands.cat.list_user_ids:main"
     list_archives = "commands.cat.list_archives:main"
+    list_deployed_catalogs = "commands.cat.list_deployed_catalogs:main"
+    list_deployed_schemas = "commands.cat.list_deployed_database_schemas:main"
 
     monitor_asset_events = "commands.ops.monitor_asset_events:main"
     monitor_coco_status = "commands.ops.monitor_coco_status:main"
@@ -116,7 +118,9 @@ pytest = "^8.2.2"
     get_element_info = "commands.tech.get_element_info:main"
     list_elements = "commands.tech.list_elements:main"
     list_related_specification = "commands.tech.list_related_specification:main"
-    list_elements_by_classification = "commands.tech.list_elements_by_classification:main"
+    list_elements_for_classification = "commands.tech.list_elements_for_classification:main"
     list_related_elements = "commands.tech.list_related_elements:main"
 
     list_valid_metadata_values = "commands.tech.list_valid_metadata_values:main"
+    list_element_graph = "commands.tech.get_element_graph:main"
+    list_gov_action_processes = "commands.tech.list_gov_action_processes:main"
