Added support for pyegeria commands to be called within a jupyter notebook. Updated several widgets.
Signed-off-by: Dan Wolfson <dwolfson@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "1.5.1.1.14"
+version = "1.5.1.1.32"
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
 readme = "README.md"
@@ -16,11 +16,11 @@ classifiers = [
  ]
 packages = [
     { include = "pyegeria"},
-    { include = "commands/cat" },
-    { include = "commands/tech" },
-    { include = "commands/my"},
-    { include = "commands/ops"},
-    { include = "commands/cli"}
+    { include = "pyegeria/commands/cat" },
+    { include = "pyegeria/commands/tech" },
+    { include = "pyegeria/commands/my"},
+    { include = "pyegeria/commands/ops"},
+    { include = "pyegeria/commands/cli"}
     ]
 
 [tool.poetry.dependencies]
@@ -52,82 +52,82 @@ pytest = "^8.2.2"
 
 
 [tool.poetry.scripts]
-    list_assets = "commands.cat.list_assets:main"
-    list_tech_types = "commands.cat.list_tech_types:main"
-    get_asset_graph = "commands.cat.get_asset_graph:main"
-    get_collection = "commands.cat.get_collection:main"
-    list_terms = "commands.cat.list_terms:main"
-    get_tech_type_elements = "commands.cat.get_tech_type_elements:main"
-    get_tech_type_template = "commands.cat.get_tech_type_template:main"
-    list_projects = "commands.cat.list_projects:main"
-    list_todos = "commands.cat.list_todos:main"
-    list_cert_types = "commands.cat.list_cert_types:main"
-    get_project_structure = "commands.cat.get_project_structure:main"
-    get_project_dependencies = "commands.cat.get_project_dependencies:main"
-    list_relationships = "commands.cat.list_relationships:main"
-    list_user_ids = "commands.cat.list_user_ids:main"
-    list_archives = "commands.cat.list_archives:main"
-    list_deployed_catalogs = "commands.cat.list_deployed_catalogs:main"
-    list_deployed_databases = "commands.cat.list_deployed_databases:main"
-    list_deployed_schemas = "commands.cat.list_deployed_database_schemas:main"
-    create_glossary = "commands.cat.glossary_actions:create_glossary"
-    delete_glossary = "commands.cat.glossary_actions:delete_glossary"
-    create_term = "commands.cat.glossary_actions:create_term"
-    list_glossaries = "commands.cat.glossary_actions:list_glossaries"
-    load_terms_from_file = "commands.cat.glossary_actions:load_terms"
-    export_terms_to_file = "commands.cat.glossary_actions:export_terms"
+    list_assets = "pyegeria.commands.cat.list_assets:main"
+    list_tech_types = "pyegeria.commands.cat.list_tech_types:main"
+    get_asset_graph = "pyegeria.commands.cat.get_asset_graph:main"
+    get_collection = "pyegeria.commands.cat.get_collection:main"
+    list_terms = "pyegeria.commands.cat.list_terms:main"
+    get_tech_type_elements = "pyegeria.commands.cat.get_tech_type_elements:main"
+    get_tech_type_template = "pyegeria.commands.cat.get_tech_type_template:main"
+    list_projects = "pyegeria.commands.cat.list_projects:main"
+    list_todos = "pyegeria.commands.cat.list_todos:main"
+    list_cert_types = "pyegeria.commands.cat.list_cert_types:main"
+    get_project_structure = "pyegeria.commands.cat.get_project_structure:main"
+    get_project_dependencies = "pyegeria.commands.cat.get_project_dependencies:main"
+    list_relationships = "pyegeria.commands.cat.list_relationships:main"
+    list_user_ids = "pyegeria.commands.cat.list_user_ids:main"
+    list_archives = "pyegeria.commands.cat.list_archives:main"
+    list_deployed_catalogs = "pyegeria.commands.cat.list_deployed_catalogs:main"
+    list_deployed_databases = "pyegeria.commands.cat.list_deployed_databases:main"
+    list_deployed_schemas = "pyegeria.commands.cat.list_deployed_database_schemas:main"
+    create_glossary = "pyegeria.commands.cat.glossary_actions:create_glossary"
+    delete_glossary = "pyegeria.commands.cat.glossary_actions:delete_glossary"
+    create_term = "pyegeria.commands.cat.glossary_actions:create_term"
+    list_glossaries = "pyegeria.commands.cat.list_glossaries:main"
+    load_terms_from_file = "pyegeria.commands.cat.glossary_actions:load_terms"
+    export_terms_to_file = "pyegeria.commands.cat.glossary_actions:export_terms"
 
-    monitor_asset_events = "commands.ops.monitor_asset_events:main"
-    monitor_coco_status = "commands.ops.monitor_coco_status:main"
-    monitor_engine_activity = "commands.ops.monitor_engine_activity:main_live"
-    list_engine_activity = "commands.ops.monitor_engine_activity:main_paging "
-    list_engine_activity_compressed = "commands.ops.monitor_engine_activity_c:main_paging "
-    monitor_engine_activity_compressed = "commands.ops.monitor_engine_activity_c:main_live"
+    monitor_asset_events = "pyegeria.commands.ops.monitor_asset_events:main"
+    monitor_coco_status = "pyegeria.commands.ops.monitor_coco_status:main"
+    monitor_engine_activity = "pyegeria.commands.ops.monitor_engine_activity:main_live"
+    list_engine_activity = "pyegeria.commands.ops.monitor_engine_activity:main_paging "
+    list_engine_activity_compressed = "pyegeria.commands.ops.monitor_engine_activity_c:main_paging "
+    monitor_engine_activity_compressed = "pyegeria.commands.ops.monitor_engine_activity_c:main_live"
 
-    monitor_gov_eng_status = "commands.ops.monitor_gov_eng_status:main_live"
-    list_gov_eng_status = "commands.ops.monitor_gov_eng_status:main_paging"
-    monitor_integ_daemon_status = "commands.ops.monitor_integ_daemon_status:main_live"
-    list_integ_daemon_status = "commands.ops.monitor_integ_daemon_status:main_paging"
-    monitor_platform_status = "commands.ops.monitor_platform_status:main"
-    monitor_server_list = "commands.ops.orig_monitor_server_list:main"
-    monitor_server_startup = "commands.ops.monitor_server_startup:main"
-    monitor_server_status = "commands.ops.monitor_server_status:main"
-    refresh_integration_daemon = "commands.ops.refresh_integration_daemon:main"
-    restart_integration_daemon = "commands.ops.restart_integration_daemon:main"
-    load_archive = "commands.ops.load_archive:load_archive"
-    load_archive_tui = "commands.ops.load_archive:tui"
-    list_catalog_targets = "commands.ops.list_catalog_targets:main"
-    start_daemon = "commands.ops.engine_actions:start_daemon"
-    stop_daemon = "commands.ops.engine_actions:stop_daemon"
+    monitor_gov_eng_status = "pyegeria.commands.ops.monitor_gov_eng_status:main_live"
+    list_gov_eng_status = "pyegeria.commands.ops.monitor_gov_eng_status:main_paging"
+    monitor_integ_daemon_status = "pyegeria.commands.ops.monitor_integ_daemon_status:main_live"
+    list_integ_daemon_status = "pyegeria.commands.ops.monitor_integ_daemon_status:main_paging"
+    monitor_platform_status = "pyegeria.commands.ops.monitor_platform_status:main"
+    monitor_server_list = "pyegeria.commands.ops.orig_monitor_server_list:main"
+    monitor_server_startup = "pyegeria.commands.ops.monitor_server_startup:main"
+    monitor_server_status = "pyegeria.commands.ops.monitor_server_status:main"
+    refresh_integration_daemon = "pyegeria.commands.ops.refresh_integration_daemon:main"
+    restart_integration_daemon = "pyegeria.commands.ops.restart_integration_daemon:main"
+    load_archive = "pyegeria.commands.ops.load_archive:load_archive"
+    load_archive_tui = "pyegeria.commands.ops.load_archive:tui"
+    list_catalog_targets = "pyegeria.commands.ops.list_catalog_targets:main"
+    start_daemon = "pyegeria.commands.ops.engine_actions:start_daemon"
+    stop_daemon = "pyegeria.commands.ops.engine_actions:stop_daemon"
 
-    list_my_profile = "commands.my.list_my_profile:main"
-    monitor_open_todos = "commands.my.monitor_open_todos:main"
-    monitor_my_todos = "commands.my.monitor_my_todos:main"
-    create_todo = "commands.my.todo_actions:create_todo"
-    delete_todo = "commands.my.todo_actions:delete_todo"
-    change_todo_status = "commands.my.todo_actions:change_todo_status"
-    mark_todo_complete = "commands.my.todo_actions:mark_todo_complete"
-    reassign_todo = "commands.my.todo_actions:reassign_todo"
+    list_my_profile = "pyegeria.commands.my.list_my_profile:main"
+    monitor_open_todos = "pyegeria.commands.my.monitor_open_todos:main"
+    monitor_my_todos = "pyegeria.commands.my.monitor_my_todos:main"
+    create_todo = "pyegeria.commands.my.todo_actions:create_todo"
+    delete_todo = "pyegeria.commands.my.todo_actions:delete_todo"
+    change_todo_status = "pyegeria.commands.my.todo_actions:change_todo_status"
+    mark_todo_complete = "pyegeria.commands.my.todo_actions:mark_todo_complete"
+    reassign_todo = "pyegeria.commands.my.todo_actions:reassign_todo"
 
 
-    hey_egeria_ops = "commands.cli.egeria_ops:cli"
-    hey_egeria_cat = "commands.cli.egeria_cat:cli"
-    hey_egeria_tech = "commands.cli.egeria_tech:cli"
-    hey_egeria_my = "commands.cli.egeria_my:cli"
-    hey_egeria = "commands.cli.egeria:cli"
+    hey_egeria_ops = "pyegeria.commands.cli.egeria_ops:cli"
+    hey_egeria_cat = "pyegeria.commands.cli.egeria_cat:cli"
+    hey_egeria_tech = "pyegeria.commands.cli.egeria_tech:cli"
+    hey_egeria_my = "pyegeria.commands.cli.egeria_my:cli"
+    hey_egeria = "pyegeria.commands.cli.egeria:cli"
 
-    get_guid_info = "commands.tech.get_guid_info:main"
-    get_tech_details = "commands.tech.get_tech_details:main"
-    list_asset_types = "commands.tech.list_asset_types:main"
-    list_registered_services = "commands.tech.list_registered_services:main"
-    list_relationship_types = "commands.tech.list_relationship_types:main"
-    list_tech_templates = "commands.tech.list_tech_templates:main"
-    get_element_info = "commands.tech.get_element_info:main"
-    list_elements = "commands.tech.list_elements:main"
-    list_related_specification = "commands.tech.list_related_specification:main"
-    list_elements_for_classification = "commands.tech.list_elements_for_classification:main"
-    list_related_elements = "commands.tech.list_related_elements:main"
+    get_guid_info = "pyegeria.commands.tech.get_guid_info:main"
+    get_tech_details = "pyegeria.commands.tech.get_tech_details:main"
+    list_asset_types = "pyegeria.commands.tech.list_asset_types:main"
+    list_registered_services = "pyegeria.commands.tech.list_registered_services:main"
+    list_relationship_types = "pyegeria.commands.tech.list_relationship_types:main"
+    list_tech_templates = "pyegeria.commands.tech.list_tech_templates:main"
+    get_element_info = "pyegeria.commands.tech.get_element_info:main"
+    list_elements = "pyegeria.commands.tech.list_elements:main"
+    list_related_specification = "pyegeria.commands.tech.list_related_specification:main"
+    list_elements_for_classification = "pyegeria.commands.tech.list_elements_for_classification:main"
+    list_related_elements = "pyegeria.commands.tech.list_related_elements:main"
 
-    list_valid_metadata_values = "commands.tech.list_valid_metadata_values:main"
-    list_element_graph = "commands.tech.get_element_graph:main"
-    list_gov_action_processes = "commands.tech.list_gov_action_processes:main"
+    list_valid_metadata_values = "pyegeria.commands.tech.list_valid_metadata_values:main"
+    list_element_graph = "pyegeria.commands.tech.get_element_graph:main"
+    list_gov_action_processes = "pyegeria.commands.tech.list_gov_action_processes:main"
