Quick update to toml file for delete_term
Signed-off-by: Dan Wolfson <dwolfson@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,7 @@ pytest = "^8.2.2"
     create_glossary = "pyegeria.commands.cat.glossary_actions:create_glossary"
     delete_glossary = "pyegeria.commands.cat.glossary_actions:delete_glossary"
     create_term = "pyegeria.commands.cat.glossary_actions:create_term"
+    delete_term = "pyegeria.commands.cat.glossary_actions:delete_term"
     list_glossaries = "pyegeria.commands.cat.list_glossaries:main"
     load_terms_from_file = "pyegeria.commands.cat.glossary_actions:load_terms"
     export_terms_to_file = "pyegeria.commands.cat.glossary_actions:export_terms"
