--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "1.5.1.1.49"
+version = "1.5.1.1.55"
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
 readme = "README.md"
@@ -58,15 +58,12 @@ pytest = "^8.2.2"
     get_collection = "pyegeria.commands.cat.get_collection:main"
     list_terms = "pyegeria.commands.cat.list_terms:main"
     get_tech_type_elements = "pyegeria.commands.cat.get_tech_type_elements:main"
-    get_tech_type_template = "pyegeria.commands.cat.get_tech_type_template:main"
     list_projects = "pyegeria.commands.cat.list_projects:main"
     list_todos = "pyegeria.commands.cat.list_todos:main"
     list_cert_types = "pyegeria.commands.cat.list_cert_types:main"
     get_project_structure = "pyegeria.commands.cat.get_project_structure:main"
     get_project_dependencies = "pyegeria.commands.cat.get_project_dependencies:main"
-    list_relationships = "pyegeria.commands.cat.list_relationships:main"
     list_user_ids = "pyegeria.commands.cat.list_user_ids:main"
-    list_archives = "pyegeria.commands.cat.list_archives:main"
     list_deployed_catalogs = "pyegeria.commands.cat.list_deployed_catalogs:main"
     list_deployed_databases = "pyegeria.commands.cat.list_deployed_databases:main"
     list_deployed_schemas = "pyegeria.commands.cat.list_deployed_database_schemas:main"
@@ -101,6 +98,7 @@ pytest = "^8.2.2"
     list_catalog_targets = "pyegeria.commands.ops.list_catalog_targets:main"
     start_daemon = "pyegeria.commands.ops.engine_actions:start_daemon"
     stop_daemon = "pyegeria.commands.ops.engine_actions:stop_daemon"
+    list_archives = "pyegeria.commands.ops.list_archives:main"
 
     list_my_profile = "pyegeria.commands.my.list_my_profile:main"
     list_my_roles = "pyegeria.commands.my.list_my_roles:main"
@@ -130,6 +128,8 @@ pytest = "^8.2.2"
     list_related_specification = "pyegeria.commands.tech.list_related_specification:main"
     list_elements_for_classification = "pyegeria.commands.tech.list_elements_for_classification:main"
     list_related_elements = "pyegeria.commands.tech.list_related_elements:main"
+    get_tech_type_template = "pyegeria.commands.tech.get_tech_type_template:main"
+    list_relationships = "pyegeria.commands.tech.list_relationships:main"
 
     list_valid_metadata_values = "pyegeria.commands.tech.list_valid_metadata_values:main"
     list_element_graph = "pyegeria.commands.tech.get_element_graph:main"
