--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "1.5.1.1.58"
+version = "1.5.1.1.61"
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
 readme = "README.md"
@@ -24,9 +24,9 @@ packages = [
     ]
 
 [tool.poetry.dependencies]
-python = "^3.11"
-httpx = "^0.27.0"
-rich = "^13.8.1"
+python = "^3.12"
+httpx = "^0.27"
+rich = "^13"
 validators = "^0.32.0"
 urllib3 = "^2.2.2"
 requests = "^2.32.3"
@@ -36,9 +36,10 @@ jupyter = "^1.0.0"
 click = "^8.1.7"
 trogon = "^0.5.0"
 textual-forms = "^0.3.0"
-textual = "^0.75.1"
+textual = "^0.86"
 mermaid-py = "^0.5.3"
 psycopg2-binary = "^2.9.9"
+rich-pixels = "^3.0.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -132,5 +133,5 @@ pytest = "^8.2.2"
     list_relationships = "pyegeria.commands.tech.list_relationships:main"
 
     list_valid_metadata_values = "pyegeria.commands.tech.list_valid_metadata_values:main"
-    list_element_graph = "pyegeria.commands.tech.get_element_graph:main"
+    list_element_graph = "pyegeria.commands.tech.list_element_graph:main"
     list_gov_action_processes = "pyegeria.commands.tech.list_gov_action_processes:main"
