--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "1.5.1.1.61"
+version = "5.2.0.6"
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
 readme = "README.md"
@@ -24,7 +24,9 @@ packages = [
     ]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+#python = "^3.11" # 3.12 seemed to fail
+python = "^3.12.3"
+#python = "^3.13" Need to upgrade jupyter image
 httpx = "^0.27"
 rich = "^13"
 validators = "^0.32.0"
@@ -34,8 +36,8 @@ confluent-kafka = "^2.5.0"
 pytest = "^8.2.2"
 jupyter = "^1.0.0"
 click = "^8.1.7"
-trogon = "^0.5.0"
-textual-forms = "^0.3.0"
+trogon = "^0.6.0"
+#textual-forms = "^0.3.0"
 textual = "^0.86"
 mermaid-py = "^0.5.3"
 psycopg2-binary = "^2.9.9"
@@ -76,6 +78,7 @@ pytest = "^8.2.2"
     load_terms_from_file = "pyegeria.commands.cat.glossary_actions:load_terms"
     export_terms_to_file = "pyegeria.commands.cat.glossary_actions:export_terms"
     list_deployed_servers = "pyegeria.commands.cat.list_servers_deployed_imp.py:main"
+    list_collections = "pyegeria.commands.cat.list_collections:main"
 
     monitor_asset_events = "pyegeria.commands.ops.monitor_asset_events:main"
     monitor_coco_status = "pyegeria.commands.ops.monitor_coco_status:main"
@@ -133,5 +136,5 @@ pytest = "^8.2.2"
     list_relationships = "pyegeria.commands.tech.list_relationships:main"
 
     list_valid_metadata_values = "pyegeria.commands.tech.list_valid_metadata_values:main"
-    list_element_graph = "pyegeria.commands.tech.list_element_graph:main"
+    list_anchored_elements = "pyegeria.commands.tech.list_anchored_elements:main"
     list_gov_action_processes = "pyegeria.commands.tech.list_gov_action_processes:main"
