--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "5.2.0.13"
+version = "5.2.0.14"
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
 readme = "README.md"
@@ -120,7 +120,7 @@ pytest = "^8.2.2"
     hey_egeria_tech = "pyegeria.commands.cli.egeria_tech:cli"
     hey_egeria_my = "pyegeria.commands.cli.egeria_my:cli"
     hey_egeria = "pyegeria.commands.cli.egeria:cli"
-    login = "pyegeria.commands.cli.egeria_login_tui:login"
+    egeria_login = "pyegeria.commands.cli.egeria_login_tui:login"
 
     get_guid_info = "pyegeria.commands.tech.get_guid_info:main"
     get_tech_details = "pyegeria.commands.tech.get_tech_details:main"
